--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-
+  <div id="board"></div>
   <script src="js/app.js" charset="utf-8"></script>
 </body>
 </html>
